Added bootstrap and authentication

--- a/main/templates/main/base.html
+++ b/main/templates/main/base.html
@@ -1,1 +1,25 @@
-{% block content %}{% endblock %}
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Pomotracker</title>
+    {% load bootstrap5 %}
+    {% bootstrap_css %}
+    {% bootstrap_javascript %}
+</head>
+
+<body>
+
+    <nav class="navbar navbar-dark bg-primary">
+        <a href="{% url 'main:home' %}" class="text-white nav-link">Home</a>
+    </nav>
+    <div class="d-flex justify-content-center pt-5">
+        {% block content %}
+
+        {% endblock %}
+    </div>
+</body>
+
+</html>
