--- a/main/templates/registration/login.html
+++ b/main/templates/registration/login.html
@@ -2,11 +2,11 @@
 {% load crispy_forms_tags %}
 
 {% block content %}
-
 <form method="post" action="{% url 'login' %}" style="max-width: 500px; min-width: 500px;">
     {% csrf_token %}
     {{ form|crispy }}
     <input type="submit" value="Login" class="btn btn-primary">
     <p class="mt-2"><a href="{% url 'main:sign_up' %}">Don't have an account?</a></p>
+    <input type="hidden" name="next" value="{{ next }}">
 </form>
 {% endblock %}
