--- a/main/templates/main/base.html
+++ b/main/templates/main/base.html
@@ -13,10 +13,15 @@
 <body>
 
     <nav class="navbar navbar-dark bg-primary d-flex justify-content-between">
-        <a href="{% url 'main:home' %}" class="text-white nav-link">Home</a>
-        {% if user.is_authenticated %}
+        <div class="d-flex">
+            <a href="{% url 'main:home' %}" class="text-white nav-link">Home</a>
+
+            {% if user.is_authenticated %}
+            <a href="{% url 'pomodoros:index' %}" class="text-white nav-link">All Pomodoros</a>
+        </div>
         <a href="{% url 'logout' %}" class="text-white nav-link">Log out</a>
         {% else %}
+        </div>
         <a href="{% url 'login' %}" class="text-white nav-link">Log in</a>
         {% endif %}
     </nav>
