--- a/pomodoros/templates/pomodoros/index.html
+++ b/pomodoros/templates/pomodoros/index.html
@@ -1,19 +1,28 @@
 {% extends "main/base.html" %}
 {% block content %}
-<div class="container-xxl d-flex flex-column gap-1 justify-content-start align-items-center">
+<div class="container-xxl d-flex flex-column justify-content-start align-items-center">
     <a href="{% url 'pomodoros:create' %}" class="btn btn-success">
         Create new pomodoro
     </a>
-    {% for pomodoro in pomodoros %}
-    <div class="m2 container-sm border rounded-3">
-        <div class="card-body">
-            <div class="card-title text-bold">
-                {{ pomodoro.user.username }}'s Pomodoro
-            </div>
-            <div class="card-text">
-                <p class="text-muted">Start time: {{ pomodoro.start_date }}</p>
-                <p class="text-muted">End time: {{ pomodoro.end_date }}</p>
-                <div>
+
+    <div class="d-flex flex-wrap justify-content-start align-items-start mt-2">
+
+
+        {% for date, pomodoros in grouped_pomodoros.items %}
+
+        <div class="rounded m-2">
+            <div class="bg-primary py-2 px-4 text-white rounded-top fs-3">{{ date }}</div>
+            {% for pomodoro in pomodoros %}
+
+            <div class="px-4 py-2 border-bottom border-start border-end">
+                <div class="card-title">
+                    {{ pomodoro.user.username }}'s Pomodoro
+                </div>
+                <div class="">
+                    <p class="text-muted">Start time: {{ pomodoro.start_date }}</p>
+                    <p class="text-muted">End time: {{ pomodoro.end_date }}</p>
+                </div>
+                <div class="d-flex justify-content-between">
                     <a href="{% url 'pomodoros:update' pomodoro.id %}" class="btn btn-warning">
                         Edit
                     </a>
@@ -22,9 +31,11 @@
                     </a>
                 </div>
             </div>
+
+            {% endfor %}
         </div>
+        {% endfor %}
     </div>
 
-    {% endfor %}
 </div>
 {% endblock %}
