--- a/main/templates/main/base.html
+++ b/main/templates/main/base.html
@@ -13,8 +13,25 @@
     <link href='https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css' rel='stylesheet'>
     <script src=" https://cdn.jsdelivr.net/npm/fullcalendar@6.1.15/index.global.min.js "></script>
     <script src="https://cdn.jsdelivr.net/npm/@fullcalendar/bootstrap5@6.1.14/index.global.min.js"></script>
+    <style>
+        .fc-daygrid-event-dot {
+            border-color: rgb(243, 79, 79) !important;
+
+        }
+
+        .fc-event-time {
+            display: none;
+        }
+
+        .fc-event-title {
+            color: black !important;
+            font-weight: 450 !important;
+        }
+    </style>
+
     {% block head %}
     {% endblock %}
+
 </head>
 
 <body>
