--- a/main/templates/registration/sign_up.html
+++ b/main/templates/registration/sign_up.html
@@ -1,12 +1,1 @@
-{% extends "main/base.html" %}
-{% load crispy_forms_tags %}
-
-{% block content %}
-<form method="post" action="{% url 'main:sign_up' %}" style="max-width: 500px; min-width: 500px;">
-    {% csrf_token %}
-    {{ form|crispy }}
-    <input type="submit" value="Sign up" class="btn btn-primary">
-    <p class="mt-2"><a href="{% url 'login' %}">Already have an account?</a></p>
-    <input type="hidden" name="next" value="{{ next }}">
-</form>
-{% endblock %}
+{% include "registration/_user_form.html" with action_url="main:sign_up" button_text="Sign up" redirect_url="login" redirect_text="Already have an account?"%}
