--- a/pomodoros/templates/pomodoros/create.html
+++ b/pomodoros/templates/pomodoros/create.html
@@ -1,10 +1,1 @@
-{% extends "main/base.html" %}
-{% load crispy_forms_tags %}
-
-{% block content %}
-<form method="post" action="{% url 'pomodoros:create' %}" style="max-width: 500px; min-width: 500px;">
-    {% csrf_token %}
-    {{ form|crispy }}
-    <input type="submit" value="Create" class="btn btn-primary">
-</form>
-{% endblock %}
+{% include "pomodoros/_pomodoro_form.html" with url_value="pomodoros:create" button_name="Create" argument=None%}
